tests/03_run/overflow/test_5.out
══════════════════════ Running solver against test cases ══════════════════════
=> base:[cases.tio(01)] prog:[exception.py] [ϵ]
(ϵ execution)[00] GR:100 cases.tio ()
╭──────────────────────────────────────────────────────────────────────────────
│                    (ϵ execution)[00] GR:100 cases.tio ()                     
├─────────────────────────────────── INPUT ────────────────────────────────────
│ 1
│ 2
│ 3
│ 4
├────────────────────────────────── EXPECTED ──────────────────────────────────
│ 1
│ 2
│ 3
│ 4
├────────────────────────────────── RECEIVED ──────────────────────────────────
│   File "/home/lion/tko/tests/03_run/overflow/./exception.py", line 1
│     except "Out"
│     ^^^^^^
│ SyntaxError: invalid syntax
╰──────────────────────────────────────────────────────────────────────────────
